@@ -1,5 +1,7 @@
 ======= 3.4.2
 
+- updated: `websocket.send2(message, comparer, replacer, [params])` by adding `params` argument for comparer function
+
 - fixed: phone validation
 
 ======= 3.4.1
